tests/checker/diagnostics/0008_core_if_condition_non_bool_01.ml.infer.expected
File "0008_core_if_condition_non_bool_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0008_core_if_condition_non_bool_01 is not a valid module name.

File "0008_core_if_condition_non_bool_01.ml", line 1, characters 11-12:
1 | let _ = if 0 then 1 else 2
               ^
Error: The constant 0 has type int but an expression was expected of type
         bool
       because it is in the condition of an if-statement
